<resources>
    <string name="app_name">UPI-Manager</string>
    <string name="pay_to">Pay To</string>
    <string name="by">By</string>
    <string name="amount_to_pay">Amount to pay</string>
    <string name="pay">Pay</string>
    <string name="thousand">1000</string>
    <string name="payer">X</string>
    <string name="y">Y</string>
    <string name="transaction">View transactions</string>
</resources>