<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#add8e6"
    tools:context=".Pay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="100dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pay_to"
            android:id="@+id/pay_to"
            android:textSize="18sp"
            android:textColor="#000000"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount_to_pay"
            android:id="@+id/pay_amount"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:textColor="#000000"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/by"
            android:id="@+id/by"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pay_button"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:text="@string/pay"
            android:textAlignment="center"
            android:background="@android:color/holo_blue_dark"
            android:textSize="24sp"
            />
    </LinearLayout>

</LinearLayout>